SdkTestAutomation.Sdk/Implementations/Go/go-src/conductor-go-bridge.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package command-line-arguments */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 3 "conductor-go-bridge.go"



#include <stdlib.h>
#include <stdint.h>

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern int CreateConductorClient(char* serverUrl);
extern void DestroyConductorClient(int clientID);
extern char* AddEventHandler(int clientID, char* name, char* eventType, int active);
extern char* GetEvents(int clientID);
extern char* GetEventByName(int clientID, char* eventName);
extern char* UpdateEvent(int clientID, char* name, char* eventType, int active);
extern char* DeleteEvent(int clientID, char* name);
extern char* StartWorkflow(int clientID, char* name, int version, char* correlationId);
extern char* GetWorkflow(int clientID, char* workflowId);
extern char* GetWorkflows(int clientID);
extern char* TerminateWorkflow(int clientID, char* workflowId, char* reason);
extern char* GetLogs();
extern void ClearLogs();
extern void FreeString(char* ptr);

#ifdef __cplusplus
}
#endif